[desk-tool] Fix wrapping text in DropdownButton

--- a/packages/@sanity/desk-tool/src/components/DropdownButton.css
+++ b/packages/@sanity/desk-tool/src/components/DropdownButton.css
@@ -28,6 +28,7 @@
   outline: none;
   background-color: var(--dropdown-button-bg);
   color: var(--dropdown-button-text);
+  white-space: nowrap;
 
   @media (hover: hover) {
     @nest &:hover {
